[tool.poetry]
name = "pad-rl"
version = "0.1.0"
description = ""
authors = ["James Ku <jameskutw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"
Pillow = "^9.1.1"
stable-baselines3 = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
